--- a/css/style.css
+++ b/css/style.css
@@ -75,7 +75,7 @@
     height: 50%;
 }
 
-.QS_text
+.Ptext
 {
     display: flex;
     justify-content: center;
@@ -112,6 +112,14 @@
     color: #FFFFFF;
     transition: .5s;      
 
+}
+
+.footer_container
+{
+    width: 100%;
+    height: 100px;
+    padding-top: 100px;
+    
 }
 
 
