--- a/css/style.css
+++ b/css/style.css
@@ -123,9 +123,12 @@
 
 .footer_main
 {
+    display: flex;
+    justify-content: center;
     width: 100%; 
     height: 100px;
     background-color: #141313;
+    color: white;
 
 }
 
