--- a/css/style_s.css
+++ b/css/style_s.css
@@ -2,8 +2,32 @@
   display: flex;
   justify-content: left;
   color: #FFFFFF;
-  font-size: 50px;
+  font-size: 60px;
   padding-left: 50px;
+  padding-top: 30px;
+}
+
+.container_primaria {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  height: 500px;
+}
+.container_primaria .horario_primaria {
+  text-align: center;
+  width: 50%;
+  color: #FFFFFF;
+}
+.container_primaria .horario_primaria .title_primaria {
+  font-size: 30px;
+}
+.container_primaria .horario_primaria .text_primaria {
+  font-size: 20px;
+}
+
+.img_primaria {
+  padding-top: 30px;
+  border-radius: 5px 5px 5px 5px;
 }
 
 /*# sourceMappingURL=style_s.css.map */
