--- a/css/style.scss
+++ b/css/style.scss
@@ -32,3 +32,43 @@ $white:  #FFFFFF;
     padding-top: 30px;
     border-radius: 5px 5px 5px 5px;
 }
+
+.container_secundaria{
+    display: flex;
+    justify-content: center;
+    color: $white;
+    font-size: 20px;
+}
+
+.ul{
+    color: $white;
+    list-style: disc;
+}
+
+section{
+    display: flex;
+    justify-content: center;
+    padding-left: 30px;
+    padding-right: 30px;
+
+    height: 430px;
+}
+section img{
+    width: 0;
+    flex-grow: 1;
+    object-fit: cover;
+    opacity: .8;
+    transition: .5s ease;
+}
+
+section img:hover{
+    cursor: pointer;
+    width: 300px;
+    opacity: 1;
+    filter: contrast(120%);
+}
+
+
+
+
+
