--- a/css/style_s.css
+++ b/css/style_s.css
@@ -30,4 +30,39 @@
   border-radius: 5px 5px 5px 5px;
 }
 
+.container_secundaria {
+  display: flex;
+  justify-content: center;
+  color: #FFFFFF;
+  font-size: 20px;
+}
+
+.ul {
+  color: #FFFFFF;
+  list-style: disc;
+}
+
+section {
+  display: flex;
+  justify-content: center;
+  padding-left: 30px;
+  padding-right: 30px;
+  height: 430px;
+}
+
+section img {
+  width: 0;
+  flex-grow: 1;
+  object-fit: cover;
+  opacity: 0.8;
+  transition: 0.5s ease;
+}
+
+section img:hover {
+  cursor: pointer;
+  width: 300px;
+  opacity: 1;
+  filter: contrast(120%);
+}
+
 /*# sourceMappingURL=style_s.css.map */
