--- a/css/style.scss
+++ b/css/style.scss
@@ -68,7 +68,51 @@ section img:hover{
     filter: contrast(120%);
 }
 
+.container_t2{
+    display: flex; 
+    justify-content: center;
+    font-size: 25px;
+    color: $white;
+}
+
+.container_text_uni_uca{
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 300px;
+    .text_universidad{
+        text-align: center;
+        width: 50%;
+        color: $white;
+        .title_universidad{
+            padding-top: 30px;
+            font-size: 30px;
+        }
+    }
+}
+
+.lista_temas{
+     display: flex;
+     justify-content: center;
+     padding-top: 30px;
+}
+
+table{
+    padding-top: 30px;
+}
+
+table tbody th{
+    text-align: left;
+}
 
 
+#btn_r{
+    padding-top: 30px;
+}
 
+.container_btn_resultados{
+    display: flex;
+    justify-content: center;
+    padding-top: 30px;
+}
 
