--- a/css/style_s.css
+++ b/css/style_s.css
@@ -65,4 +65,51 @@ section img:hover {
   filter: contrast(120%);
 }
 
+.container_t2 {
+  display: flex;
+  justify-content: center;
+  font-size: 25px;
+  color: #FFFFFF;
+}
+
+.container_text_uni_uca {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  height: 300px;
+}
+.container_text_uni_uca .text_universidad {
+  text-align: center;
+  width: 50%;
+  color: #FFFFFF;
+}
+.container_text_uni_uca .text_universidad .title_universidad {
+  padding-top: 30px;
+  font-size: 30px;
+}
+
+.lista_temas {
+  display: flex;
+  justify-content: center;
+  padding-top: 30px;
+}
+
+table {
+  padding-top: 30px;
+}
+
+table tbody th {
+  text-align: left;
+}
+
+#btn_r {
+  padding-top: 30px;
+}
+
+.container_btn_resultados {
+  display: flex;
+  justify-content: center;
+  padding-top: 30px;
+}
+
 /*# sourceMappingURL=style_s.css.map */
