--- a/css/style.scss
+++ b/css/style.scss
@@ -1,5 +1,29 @@
 $white:  #FFFFFF; 
 
+.inicio{
+    width: 100%;
+    height: 450px;
+    display: flex;
+    justify-content: center;
+    .inicio_medio1{
+        width: 60%;
+    }
+    .inicio_medio2{
+        width: 40%;
+    }
+}
+
+.imagen_inicio{
+    width: 50%;
+    height: 50%;
+}
+
+.right-inicio-container{
+    padding-right: 30px;
+}
+
+
+
 .Ltitle
 {
     display: flex;
