--- a/css/style_s.css
+++ b/css/style_s.css
@@ -1,3 +1,25 @@
+.inicio {
+  width: 100%;
+  height: 450px;
+  display: flex;
+  justify-content: center;
+}
+.inicio .inicio_medio1 {
+  width: 60%;
+}
+.inicio .inicio_medio2 {
+  width: 40%;
+}
+
+.imagen_inicio {
+  width: 50%;
+  height: 50%;
+}
+
+.right-inicio-container {
+  padding-right: 30px;
+}
+
 .Ltitle {
   display: flex;
   justify-content: left;
