--- a/css/style.scss
+++ b/css/style.scss
@@ -4,14 +4,18 @@ $white:  #FFFFFF;
     width: 100%;
     height: 450px;
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     .inicio_medio1{
-        width: 60%;
+        width: 50%;
     }
     .inicio_medio2{
-        width: 40%;
+        width: 50%;
     }
 }
+
+
+
 
 .imagen_inicio{
     width: 50%;
@@ -152,4 +156,16 @@ table tbody th{
 .gallery{
     columns: 5 320px;
     column-gap: 1em;
+}
+@media screen and (max-width: 600px){
+    .inicio{
+        flex-direction: column;
+    }
+    .inicio_medio1, .inicio_medio2 {
+        width: 100%;
+    }
+    .imagen_inicio{
+        width: 100%;
+        height: 100%;
+    }
 }
