--- a/css/style.scss
+++ b/css/style.scss
@@ -6,20 +6,14 @@ $white:  #FFFFFF;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    .inicio_medio1{
-        width: 50%;
-    }
-    .inicio_medio2{
+    .inicio_medio1, .inicio_medio2{
         width: 50%;
     }
 }
 
-
-
-
 .imagen_inicio{
-    width: 50%;
-    height: 50%;
+    width: 100%;
+    height: 100%;
 }
 
 .right-inicio-container{
@@ -165,7 +159,8 @@ table tbody th{
         width: 100%;
     }
     .imagen_inicio{
+        padding-top: 50px;
         width: 100%;
-        height: 100%;
+        height: 70%;
     }
 }
