--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,7 @@
 .card
 {
     width: 300px;
-    height: 320px;
+    height:fit-content;
     margin-left: 10px;
     margin-right: 10px;
     margin-top: 10px;
