--- a/css/style_s.css
+++ b/css/style_s.css
@@ -1,3 +1,8 @@
+.container_btn_resultados, .lista_temas, .container_text_uni_uca, .container_t2, section, .container_secundaria, .container_primaria, .Ltitle {
+  display: flex;
+  justify-content: center;
+}
+
 .inicio {
   width: 100%;
   height: 450px;
@@ -19,8 +24,6 @@
 }
 
 .Ltitle {
-  display: flex;
-  justify-content: left;
   color: #FFFFFF;
   font-size: 60px;
   padding-left: 50px;
@@ -28,8 +31,6 @@
 }
 
 .container_primaria {
-  display: flex;
-  justify-content: center;
   width: 100%;
   height: 500px;
 }
@@ -51,8 +52,6 @@
 }
 
 .container_secundaria {
-  display: flex;
-  justify-content: center;
   color: #FFFFFF;
   font-size: 20px;
 }
@@ -63,8 +62,6 @@
 }
 
 section {
-  display: flex;
-  justify-content: center;
   padding-left: 30px;
   padding-right: 30px;
   height: 430px;
@@ -86,15 +83,11 @@ section img:hover {
 }
 
 .container_t2 {
-  display: flex;
-  justify-content: center;
   font-size: 25px;
   color: #FFFFFF;
 }
 
 .container_text_uni_uca {
-  display: flex;
-  justify-content: center;
   width: 100%;
   height: 300px;
 }
@@ -109,8 +102,6 @@ section img:hover {
 }
 
 .lista_temas {
-  display: flex;
-  justify-content: center;
   padding-top: 30px;
 }
 
@@ -127,8 +118,6 @@ table tbody th {
 }
 
 .container_btn_resultados {
-  display: flex;
-  justify-content: center;
   padding-top: 30px;
 }
 
